// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createRepeatable should remove repeatable component 1`] = `
<form>
  <div>
    <div>
      <input
        name="experiences,0,title"
        onChange={[Function]}
        type="text"
        value=""
      />
      <input
        name="experiences,0,start"
        onChange={[Function]}
        type="text"
        value=""
      />
      <input
        name="experiences,0,end"
        onChange={[Function]}
        type="text"
        value=""
      />
      <button
        onClick={[Function]}
      >
        Up
      </button>
      <button
        onClick={[Function]}
      >
        Down
      </button>
      <button
        onClick={[Function]}
      >
        Add
      </button>
      <button
        onClick={[Function]}
      >
        Remove
      </button>
    </div>
    <div>
      <input
        name="experiences,1,title"
        onChange={[Function]}
        type="text"
        value=""
      />
      <input
        name="experiences,1,start"
        onChange={[Function]}
        type="text"
        value=""
      />
      <input
        name="experiences,1,end"
        onChange={[Function]}
        type="text"
        value=""
      />
      <button
        onClick={[Function]}
      >
        Up
      </button>
      <button
        onClick={[Function]}
      >
        Down
      </button>
      <button
        onClick={[Function]}
      >
        Add
      </button>
      <button
        onClick={[Function]}
      >
        Remove
      </button>
    </div>
    <div>
      <input
        name="experiences,2,title"
        onChange={[Function]}
        type="text"
        value=""
      />
      <input
        name="experiences,2,start"
        onChange={[Function]}
        type="text"
        value=""
      />
      <input
        name="experiences,2,end"
        onChange={[Function]}
        type="text"
        value=""
      />
      <button
        onClick={[Function]}
      >
        Up
      </button>
      <button
        onClick={[Function]}
      >
        Down
      </button>
      <button
        onClick={[Function]}
      >
        Add
      </button>
      <button
        onClick={[Function]}
      >
        Remove
      </button>
    </div>
  </div>
</form>
`;

exports[`createRepeatable should render added repeatable component 1`] = `
<form>
  <div>
    <div>
      <input
        name="experiences,0,title"
        onChange={[Function]}
        type="text"
        value=""
      />
      <input
        name="experiences,0,start"
        onChange={[Function]}
        type="text"
        value=""
      />
      <input
        name="experiences,0,end"
        onChange={[Function]}
        type="text"
        value=""
      />
      <button
        onClick={[Function]}
      >
        Up
      </button>
      <button
        onClick={[Function]}
      >
        Down
      </button>
      <button
        onClick={[Function]}
      >
        Add
      </button>
      <button
        onClick={[Function]}
      >
        Remove
      </button>
    </div>
    <div>
      <input
        name="experiences,1,title"
        onChange={[Function]}
        type="text"
        value=""
      />
      <input
        name="experiences,1,start"
        onChange={[Function]}
        type="text"
        value=""
      />
      <input
        name="experiences,1,end"
        onChange={[Function]}
        type="text"
        value=""
      />
      <button
        onClick={[Function]}
      >
        Up
      </button>
      <button
        onClick={[Function]}
      >
        Down
      </button>
      <button
        onClick={[Function]}
      >
        Add
      </button>
      <button
        onClick={[Function]}
      >
        Remove
      </button>
    </div>
    <div>
      <input
        name="experiences,2,title"
        onChange={[Function]}
        type="text"
        value=""
      />
      <input
        name="experiences,2,start"
        onChange={[Function]}
        type="text"
        value=""
      />
      <input
        name="experiences,2,end"
        onChange={[Function]}
        type="text"
        value=""
      />
      <button
        onClick={[Function]}
      >
        Up
      </button>
      <button
        onClick={[Function]}
      >
        Down
      </button>
      <button
        onClick={[Function]}
      >
        Add
      </button>
      <button
        onClick={[Function]}
      >
        Remove
      </button>
    </div>
    <div>
      <input
        name="experiences,3,title"
        onChange={[Function]}
        type="text"
        value=""
      />
      <input
        name="experiences,3,start"
        onChange={[Function]}
        type="text"
        value=""
      />
      <input
        name="experiences,3,end"
        onChange={[Function]}
        type="text"
        value=""
      />
      <button
        onClick={[Function]}
      >
        Up
      </button>
      <button
        onClick={[Function]}
      >
        Down
      </button>
      <button
        onClick={[Function]}
      >
        Add
      </button>
      <button
        onClick={[Function]}
      >
        Remove
      </button>
    </div>
  </div>
</form>
`;

exports[`createRepeatable should render moved repeatable component 1`] = `
<form>
  <div>
    <div>
      <input
        name="experiences,0,title"
        onChange={[Function]}
        type="text"
        value="web intern"
      />
      <input
        name="experiences,0,start"
        onChange={[Function]}
        type="text"
        value="01-08-2016"
      />
      <input
        name="experiences,0,end"
        onChange={[Function]}
        type="text"
        value="01-08-2017"
      />
      <button
        onClick={[Function]}
      >
        Up
      </button>
      <button
        onClick={[Function]}
      >
        Down
      </button>
      <button
        onClick={[Function]}
      >
        Add
      </button>
      <button
        onClick={[Function]}
      >
        Remove
      </button>
    </div>
    <div>
      <input
        name="experiences,1,title"
        onChange={[Function]}
        type="text"
        value="web architect"
      />
      <input
        name="experiences,1,start"
        onChange={[Function]}
        type="text"
        value="01-08-2017"
      />
      <input
        name="experiences,1,end"
        onChange={[Function]}
        type="text"
        value="01-08-2018"
      />
      <button
        onClick={[Function]}
      >
        Up
      </button>
      <button
        onClick={[Function]}
      >
        Down
      </button>
      <button
        onClick={[Function]}
      >
        Add
      </button>
      <button
        onClick={[Function]}
      >
        Remove
      </button>
    </div>
    <div>
      <input
        name="experiences,2,title"
        onChange={[Function]}
        type="text"
        value="web engineer"
      />
      <input
        name="experiences,2,start"
        onChange={[Function]}
        type="text"
        value="01-08-2015"
      />
      <input
        name="experiences,2,end"
        onChange={[Function]}
        type="text"
        value="01-08-2016"
      />
      <button
        onClick={[Function]}
      >
        Up
      </button>
      <button
        onClick={[Function]}
      >
        Down
      </button>
      <button
        onClick={[Function]}
      >
        Add
      </button>
      <button
        onClick={[Function]}
      >
        Remove
      </button>
    </div>
  </div>
</form>
`;

exports[`createRepeatable should render repeatable component 1`] = `
<form>
  <div>
    <div>
      <input
        name="experiences,0,title"
        onChange={[Function]}
        type="text"
        value=""
      />
      <input
        name="experiences,0,start"
        onChange={[Function]}
        type="text"
        value=""
      />
      <input
        name="experiences,0,end"
        onChange={[Function]}
        type="text"
        value=""
      />
      <button
        onClick={[Function]}
      >
        Up
      </button>
      <button
        onClick={[Function]}
      >
        Down
      </button>
      <button
        onClick={[Function]}
      >
        Add
      </button>
      <button
        onClick={[Function]}
      >
        Remove
      </button>
    </div>
    <div>
      <input
        name="experiences,1,title"
        onChange={[Function]}
        type="text"
        value=""
      />
      <input
        name="experiences,1,start"
        onChange={[Function]}
        type="text"
        value=""
      />
      <input
        name="experiences,1,end"
        onChange={[Function]}
        type="text"
        value=""
      />
      <button
        onClick={[Function]}
      >
        Up
      </button>
      <button
        onClick={[Function]}
      >
        Down
      </button>
      <button
        onClick={[Function]}
      >
        Add
      </button>
      <button
        onClick={[Function]}
      >
        Remove
      </button>
    </div>
    <div>
      <input
        name="experiences,2,title"
        onChange={[Function]}
        type="text"
        value=""
      />
      <input
        name="experiences,2,start"
        onChange={[Function]}
        type="text"
        value=""
      />
      <input
        name="experiences,2,end"
        onChange={[Function]}
        type="text"
        value=""
      />
      <button
        onClick={[Function]}
      >
        Up
      </button>
      <button
        onClick={[Function]}
      >
        Down
      </button>
      <button
        onClick={[Function]}
      >
        Add
      </button>
      <button
        onClick={[Function]}
      >
        Remove
      </button>
    </div>
  </div>
</form>
`;

exports[`createRepeatable should render repeatable component on change 1`] = `
<form>
  <div>
    <div>
      <input
        name="experiences,0,title"
        onChange={[Function]}
        type="text"
        value="web engineer"
      />
      <input
        name="experiences,0,start"
        onChange={[Function]}
        type="text"
        value="01-08-2015"
      />
      <input
        name="experiences,0,end"
        onChange={[Function]}
        type="text"
        value="01-08-2016"
      />
      <button
        onClick={[Function]}
      >
        Up
      </button>
      <button
        onClick={[Function]}
      >
        Down
      </button>
      <button
        onClick={[Function]}
      >
        Add
      </button>
      <button
        onClick={[Function]}
      >
        Remove
      </button>
    </div>
    <div>
      <input
        name="experiences,1,title"
        onChange={[Function]}
        type="text"
        value="web intern"
      />
      <input
        name="experiences,1,start"
        onChange={[Function]}
        type="text"
        value="01-08-2016"
      />
      <input
        name="experiences,1,end"
        onChange={[Function]}
        type="text"
        value="01-08-2017"
      />
      <button
        onClick={[Function]}
      >
        Up
      </button>
      <button
        onClick={[Function]}
      >
        Down
      </button>
      <button
        onClick={[Function]}
      >
        Add
      </button>
      <button
        onClick={[Function]}
      >
        Remove
      </button>
    </div>
    <div>
      <input
        name="experiences,2,title"
        onChange={[Function]}
        type="text"
        value="web architect"
      />
      <input
        name="experiences,2,start"
        onChange={[Function]}
        type="text"
        value="01-08-2017"
      />
      <input
        name="experiences,2,end"
        onChange={[Function]}
        type="text"
        value="01-08-2018"
      />
      <button
        onClick={[Function]}
      >
        Up
      </button>
      <button
        onClick={[Function]}
      >
        Down
      </button>
      <button
        onClick={[Function]}
      >
        Add
      </button>
      <button
        onClick={[Function]}
      >
        Remove
      </button>
    </div>
  </div>
</form>
`;
